--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
     "mongoose": "^5.11.18",
     "passport": "^0.7.0",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12"
   }
 }
